--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -79,8 +79,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Request Date</mat-label>
         <input #requestTime matInput placeholder="Request Date" formControlName="requestTime" class="hidden">
-        <div>{{requestTime.value}}</div>
-        <span id="requestTime">{{requestTime.value | easternTime}}</span>
+        <span>{{requestTime.value | easternTime}}</span>
       </mat-form-field>
     </div>
   </mat-dialog-content>
