--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -37,7 +37,7 @@
         </mat-icon>
         <mat-hint>Copy and paste source file path here. It must be in the form of file://path/to/folder</mat-hint>
         <mat-error *ngIf="loadRequestCreationForm.get('sourceFilePath')?.hasError('sourceFilePathError')">
-          Please select source file from NLM server
+          The path must be subfolder under the base URL file://nlmsambaserver.nlm.nih.gov/dev-ts-data-import/
         </mat-error>
       </mat-form-field>
       <div class="mb-5">
@@ -45,7 +45,7 @@
         <mat-radio-group aria-label-by="load-request-type-label" id="load-request-type-radio"
                          formControlName="requestType">
           <div class="ml-20">
-            <mat-radio-button *ngFor="let LOAD_REQUEST_TYPE of ['Emergency', 'Regular', 'Scheduled']"
+            <mat-radio-button *ngFor="let LOAD_REQUEST_TYPE of ['Regular', 'Emergency', 'Scheduled']"
                               [value]="LOAD_REQUEST_TYPE"
                               class="block">{{LOAD_REQUEST_TYPE}}</mat-radio-button>
             <ng-container *ngIf="loadRequestCreationForm.get('requestType')?.value === 'Scheduled'">
@@ -55,9 +55,12 @@
                        [matDatepickerFilter]="futureDateFilter">
                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
+                <mat-error *ngIf="loadRequestCreationForm.get('scheduledDate')?.hasError('matDatepickerFilter')">
+                  The date cannot be before current date
+                </mat-error>
               </mat-form-field>
               <mat-form-field appearance="outline" class="dense-form-field">
-                <mat-label>Scheduled time</mat-label>
+                <mat-label>Scheduled Time</mat-label>
                 <mat-select formControlName="scheduledTime">
                   <mat-option value=""></mat-option>
                   <mat-option *ngFor="let option of scheduledTimeOptions()" [value]="option">{{option}}</mat-option>
@@ -71,10 +74,13 @@
       <mat-form-field appearance="outline">
         <mat-label>Notification Email</mat-label>
         <input matInput placeholder="contact@nlm.nih.gov" formControlName="notificationEmail">
+        <mat-error *ngIf="loadRequestCreationForm.get('notificationEmail')?.invalid">
+          The email is not valid
+        </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Requester</mat-label>
-        <input matInput placeholder="Requester" type="email" formControlName="requester">
+        <input matInput placeholder="Requester" type="email" formControlName="requesterDisplay" class="hidden">{{userService.user!.utsUser.firstName}} {{userService.user!.utsUser.lastName}}
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Request Date</mat-label>
