--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -105,7 +105,7 @@
 
         <ng-container matColumnDef="requestStatus">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <label for="requestStatusFilterSelect" class="flex flex-col m-2" mat-sort-header disableClear>Status</label>
+            <label for="requestStatusFilterSelect" class="flex flex-col" mat-sort-header disableClear>Status</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestStatus}}</td>
         </ng-container>
@@ -142,7 +142,7 @@
 
         <ng-container matColumnDef="requestTime">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <label for="requestTimeRange" class="flex flex-col m-2" mat-sort-header disableClear>Request Time</label>
+            <label for="requestTimeRange" class="flex flex-col" mat-sort-header disableClear>Request Time</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestTime.replace(' ', '') | easternTime }}</td>
         </ng-container>
@@ -177,7 +177,7 @@
 
         <ng-container matColumnDef="creationTime">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <label for="creationTimeRange" class="flex flex-col m-2" mat-sort-header disableClear>Creation Time</label>
+            <label for="creationTimeRange" class="flex flex-col" mat-sort-header disableClear>Creation Time</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.creationTime | easternTime}}</td>
         </ng-container>
