--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -80,7 +80,8 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Requester</mat-label>
-        <input matInput placeholder="Requester" type="email" formControlName="requesterDisplay" class="hidden">{{userService.user!.utsUser.firstName}} {{userService.user!.utsUser.lastName}}
+        <input matInput placeholder="Requester" type="email"
+               class="hidden">{{userService.user!.utsUser.firstName}} {{userService.user!.utsUser.lastName}}
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Request Date</mat-label>
