--- a/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
+++ b/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
@@ -1,92 +1,92 @@
-<ng-container *ngIf="(loadRequest$ | async) as loadRequest">
-  <fieldset>
-    <legend>Load Request</legend>
-    <ng-container *ngIf="loadRequest.requestStatus === 'Open' && user?.utsUser!.username === loadRequest.requester">
-      <button mat-fab extended (click)="openEditDialog(loadRequest)">
-        Edit
-      </button>
-      <button mat-fab extended (click)="openCancelDialog(loadRequest.opRequestSeq)">
-        Cancel
-      </button>
-    </ng-container>
+<ng-container *ngIf="(loadRequest$ | async) as loadRequestDetail">
+  <ng-container *ngIf="loadRequestDetail.loadRequestRecord as loadRequestRecord">
+    <fieldset>
+      <legend>Load Request</legend>
+      <ng-container
+        *ngIf="loadRequestRecord.requestStatus === 'Open' && user?.utsUser!.username === loadRequestRecord.requester">
+        <button mat-fab extended (click)="openEditDialog(loadRequestRecord)">
+          Edit
+        </button>
+        <button mat-fab extended (click)="openCancelDialog(loadRequestRecord.opRequestSeq)">
+          Cancel
+        </button>
+      </ng-container>
 
-    <div class="mat-elevation-z8 my-3">
-      <table mat-table [dataSource]="dataSource">
-        <!-- Key Column -->
-        <ng-container matColumnDef="key">
-          <th mat-header-cell *matHeaderCellDef>Key</th>
-          <td mat-cell *matCellDef="let element" class="text-end">{{element.label}}</td>
-        </ng-container>
+      <div class="mat-elevation-z8 my-3">
+        <table mat-table [dataSource]="dataSource">
+          <!-- Key Column -->
+          <ng-container matColumnDef="key">
+            <th mat-header-cell *matHeaderCellDef>Key</th>
+            <td mat-cell *matCellDef="let element" class="text-end">{{element.label}}</td>
+          </ng-container>
 
-        <!-- Value Column -->
-        <ng-container matColumnDef="value">
-          <th mat-header-cell *matHeaderCellDef>Value</th>
-          <td mat-cell *matCellDef="let element">
-            <ng-container [ngSwitch]="element.key">
-              <ng-container *ngSwitchCase="'loadNumber'">
-                <a routerLink="/load-versions"
-                   [queryParams]="{loadNumber:element.value, expand:0}">{{element.value}}</a>
-              </ng-container>
-              <ng-container *ngSwitchCase="'loadElapsedTime'">
-                {{element.value | easternTime:'hh:mm:ss'}}
-              </ng-container>
-              <section *ngSwitchCase="'messageList'" class="message-table">
-                <table *ngIf="element.value?.length" mat-table [dataSource]="element.value">
-                  <ng-container matColumnDef="type">
-                    <th mat-header-cell *matHeaderCellDef> Type </th>
-                    <td mat-cell *matCellDef="let row"> {{row.messageType}} </td>
-                  </ng-container>
-                  <ng-container matColumnDef="tag">
-                    <th mat-header-cell *matHeaderCellDef> Tag </th>
-                    <td mat-cell *matCellDef="let row"> {{row.tag}} </td>
-                  </ng-container>
-                  <ng-container matColumnDef="message">
-                    <th mat-header-cell *matHeaderCellDef> Message </th>
-                    <td mat-cell *matCellDef="let row"> {{row.message}} </td>
-                  </ng-container>
-                  <ng-container matColumnDef="time">
-                    <th mat-header-cell *matHeaderCellDef> Time </th>
-                    <td mat-cell *matCellDef="let row"> {{row.creationTime | easternTime }} </td>
-                  </ng-container>
-
-                  <tr mat-header-row *matHeaderRowDef="messageColumns; sticky: true"></tr>
-                  <tr mat-row *matRowDef="let row; columns: messageColumns;"></tr>
-              </table>
-              </section>
-              <ng-container *ngSwitchDefault>
-                <ng-container *ngIf="isTime(element.key); else regularField">
-                  {{element.value | easternTime}}
+          <!-- Value Column -->
+          <ng-container matColumnDef="value">
+            <th mat-header-cell *matHeaderCellDef>Value</th>
+            <td mat-cell *matCellDef="let element">
+              <ng-container [ngSwitch]="element.key">
+                <ng-container *ngSwitchCase="'loadNumber'">
+                  <a routerLink="/load-versions"
+                     [queryParams]="{loadNumber:element.value, expand:0}">{{element.value}}</a>
                 </ng-container>
-                <ng-template #regularField>
-                  {{element.value}}
-                </ng-template>
+                <ng-container *ngSwitchCase="'loadElapsedTime'">
+                  {{element.value | easternTime:'hh:mm:ss'}}
+                </ng-container>
+                <section *ngSwitchCase="'loadRequestMessageList'" class="message-table">
+                  <table *ngIf="element.value?.length" mat-table [dataSource]="element.value"
+                         class="border-solid border-black border-2">
+                    <ng-container matColumnDef="type">
+                      <th mat-header-cell *matHeaderCellDef> Type</th>
+                      <td mat-cell *matCellDef="let row"> {{row.messageType}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="tag">
+                      <th mat-header-cell *matHeaderCellDef> Tag</th>
+                      <td mat-cell *matCellDef="let row"> {{row.tag}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="message">
+                      <th mat-header-cell *matHeaderCellDef> Message</th>
+                      <td mat-cell *matCellDef="let row"> {{row.message}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="time">
+                      <th mat-header-cell *matHeaderCellDef> Time</th>
+                      <td mat-cell *matCellDef="let row"> {{row.creationTime | easternTime }} </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="messageColumns; sticky: true"></tr>
+                    <tr mat-row *matRowDef="let row; columns: messageColumns;"></tr>
+                  </table>
+                </section>
+                <ng-container *ngSwitchDefault>
+                  <ng-container *ngIf="isTime(element.key); else regularField">
+                    {{element.value | easternTime}}
+                  </ng-container>
+                  <ng-template #regularField>
+                    {{element.value}}
+                  </ng-template>
+                </ng-container>
               </ng-container>
-            </ng-container>
-          </td>
-        </ng-container>
+            </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-        <tr *matNoDataRow>
-          <td class="mat-cell" colspan="9">
-            No results found.
-          </td>
-        </tr>
-      </table>
-    </div>
+          <tr *matNoDataRow>
+            <td class="mat-cell" colspan="9">
+              No results found.
+            </td>
+          </tr>
+        </table>
+      </div>
 
-    <ng-container *ngIf="(loadVersion$ | async) as loadVersion">
-
-      {{loadVersion.codeSystemName}}
 
       <app-load-request-activity
-        [loadVersion]="loadVersion"></app-load-request-activity>
+        [componentActivities]="loadRequestDetail.loadComponentList"></app-load-request-activity>
       <app-load-request-message
-        [loadVersion]="loadVersion"></app-load-request-message>
-    </ng-container>
-  </fieldset>
+        [loadComponentMessages]="loadRequestDetail.loadComponentMessageList"></app-load-request-message>
 
+    </fieldset>
+  </ng-container>
 </ng-container>
 
 
