--- a/projects/ts-etl-ui/src/log-in-modal/log-in-modal.component.html
+++ b/projects/ts-etl-ui/src/log-in-modal/log-in-modal.component.html
@@ -1,7 +1,8 @@
 <h2 mat-dialog-title>Login with Following</h2>
 <mat-dialog-content class="mat-typography">
   <div class="mt-3">
-    <button mat-raised-button (click)="redirectToLogin()">UTS</button>
+    <a mat-raised-button
+       href="{{environment.loginServiceUrl}}?service={{window.location.origin}}{{platformLocation.getBaseHrefFromDOM()}}login-cb">UTS</a>
   </div>
 </mat-dialog-content>
 <mat-dialog-actions>
