--- a/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
+++ b/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
@@ -1,13 +1,13 @@
 <ng-container *ngIf="(loadRequest$ | async) as loadRequestDetail">
-  <ng-container *ngIf="loadRequestDetail.loadRequestRecord as loadRequestRecord">
+  <ng-container *ngIf="loadRequestDetail.loadRequestSummary as loadRequestSummary">
     <fieldset>
       <legend>Load Request</legend>
       <ng-container
-        *ngIf="loadRequestRecord.requestStatus === 'Open' && user?.utsUser!.username === loadRequestRecord.requester">
-        <button mat-fab extended (click)="openEditDialog(loadRequestRecord)">
+        *ngIf="loadRequestSummary.requestStatus === 'Open' && user?.utsUser!.username === loadRequestSummary.requester">
+        <button mat-fab extended (click)="openEditDialog(loadRequestSummary)">
           Edit
         </button>
-        <button mat-fab extended (click)="openCancelDialog(loadRequestRecord.opRequestSeq)">
+        <button mat-fab extended (click)="openCancelDialog(loadRequestSummary.opRequestSeq)">
           Cancel
         </button>
       </ng-container>
