add red border if no radio selected

--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -41,8 +41,8 @@
         </mat-error>
       </mat-form-field>
       <div class="mb-5">
-        <fieldset class="custom-mat-form-field">
-          <legend class="mat-label">Request Type</legend>
+        <fieldset class="custom-mat-form-field" [ngClass]="loadRequestCreationForm.get('requestType')?.errors?'border-red-500':''">
+          <legend class="mat-label">Request Type*</legend>
           <mat-radio-group aria-label-by="load-request-type-label" id="load-request-type-radio"
                          formControlName="requestType">
             <div class="ml-20">
