imitate mat-form-field around a radio group (#445)
* imitate mat-form-field around a radio group

* add red border if no radio selected

---------

Co-authored-by: Ludet <ludetc@nih.gov>

--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -41,35 +41,37 @@
         </mat-error>
       </mat-form-field>
       <div class="mb-5">
-        <label id="load-request-type-label" for="load-request-type-radio">Request Type</label>
-        <mat-radio-group aria-label-by="load-request-type-label" id="load-request-type-radio"
+        <fieldset class="custom-mat-form-field" [ngClass]="loadRequestCreationForm.get('requestType')?.errors?'border-red-500':''">
+          <legend class="mat-label">Request Type*</legend>
+          <mat-radio-group aria-label-by="load-request-type-label" id="load-request-type-radio"
                          formControlName="requestType">
-          <div class="ml-20">
-            <mat-radio-button *ngFor="let LOAD_REQUEST_TYPE of ['Regular', 'Emergency', 'Scheduled']"
-                              [value]="LOAD_REQUEST_TYPE"
-                              class="block">{{LOAD_REQUEST_TYPE}}</mat-radio-button>
-            <ng-container *ngIf="loadRequestCreationForm.get('requestType')?.value === 'Scheduled'">
-              <mat-form-field appearance="outline" class="ml-3 dense-form-field">
-                <mat-label>Scheduled Date</mat-label>
-                <input matInput formControlName="scheduledDate" [matDatepicker]="picker"
-                       [matDatepickerFilter]="futureDateFilter">
-                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-                <mat-error *ngIf="loadRequestCreationForm.get('scheduledDate')?.hasError('matDatepickerFilter')">
-                  The date cannot be before current date
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field appearance="outline" class="dense-form-field">
-                <mat-label>Scheduled Time</mat-label>
-                <mat-select formControlName="scheduledTime">
-                  <mat-option value=""></mat-option>
-                  <mat-option *ngFor="let option of scheduledTimeOptions()" [value]="option">{{option}}</mat-option>
-                </mat-select>
-              </mat-form-field>
-              EST
-            </ng-container>
-          </div>
-        </mat-radio-group>
+            <div class="ml-20">
+              <mat-radio-button *ngFor="let LOAD_REQUEST_TYPE of ['Regular', 'Emergency', 'Scheduled']"
+                                [value]="LOAD_REQUEST_TYPE"
+                                class="block">{{LOAD_REQUEST_TYPE}}</mat-radio-button>
+              <ng-container *ngIf="loadRequestCreationForm.get('requestType')?.value === 'Scheduled'">
+                <mat-form-field appearance="outline" class="ml-3 dense-form-field">
+                  <mat-label>Scheduled Date</mat-label>
+                  <input matInput formControlName="scheduledDate" [matDatepicker]="picker"
+                         [matDatepickerFilter]="futureDateFilter">
+                  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                  <mat-datepicker #picker></mat-datepicker>
+                  <mat-error *ngIf="loadRequestCreationForm.get('scheduledDate')?.hasError('matDatepickerFilter')">
+                    The date cannot be before current date
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field appearance="outline" class="dense-form-field">
+                  <mat-label>Scheduled Time</mat-label>
+                  <mat-select formControlName="scheduledTime">
+                    <mat-option value=""></mat-option>
+                    <mat-option *ngFor="let option of scheduledTimeOptions()" [value]="option">{{option}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+                EST
+              </ng-container>
+            </div>
+          </mat-radio-group>
+        </fieldset>
       </div>
       <mat-form-field appearance="outline">
         <mat-label>Notification Email</mat-label>
