--- a/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
+++ b/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
@@ -30,31 +30,12 @@
                      [queryParams]="{loadNumber:element.value, expand:0}">{{element.value}}</a>
                 </ng-container>
                 <ng-container *ngSwitchCase="'loadElapsedTime'">
-                  {{element.value | easternTime:'hh:mm:ss'}}
+                  {{element.value | easternTime:'s'}}
                 </ng-container>
-                <section *ngSwitchCase="'loadRequestMessageList'" class="message-table">
-                  <table *ngIf="element.value?.length" mat-table [dataSource]="element.value"
-                         class="border-solid border-black border-2">
-                    <ng-container matColumnDef="type">
-                      <th mat-header-cell *matHeaderCellDef> Type</th>
-                      <td mat-cell *matCellDef="let row"> {{row.messageType}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="tag">
-                      <th mat-header-cell *matHeaderCellDef> Tag</th>
-                      <td mat-cell *matCellDef="let row"> {{row.tag}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="message">
-                      <th mat-header-cell *matHeaderCellDef> Message</th>
-                      <td mat-cell *matCellDef="let row"> {{row.message}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="time">
-                      <th mat-header-cell *matHeaderCellDef> Time</th>
-                      <td mat-cell *matCellDef="let row"> {{row.creationTime | easternTime }} </td>
-                    </ng-container>
-
-                    <tr mat-header-row *matHeaderRowDef="messageColumns; sticky: true"></tr>
-                    <tr mat-row *matRowDef="let row; columns: messageColumns;"></tr>
-                  </table>
+                <section *ngSwitchCase="'loadRequestMessageList'"
+                         class="message-table border-solid border-black border-2">
+                  <app-load-request-message *ngIf="element.value?.length"
+                                            [loadRequestMessages]="element.value"></app-load-request-message>
                 </section>
                 <ng-container *ngSwitchDefault>
                   <ng-container *ngIf="isTime(element.key); else regularField">
@@ -80,10 +61,10 @@
       </div>
 
 
-      <app-load-request-activity
-        [componentActivities]="loadRequestDetail.loadComponentList"></app-load-request-activity>
-      <app-load-request-message
-        [loadComponentMessages]="loadRequestDetail.loadComponentMessageList"></app-load-request-message>
+      <app-load-component
+        [loadComponents]="loadRequestDetail.loadComponentList"></app-load-component>
+      <app-load-component-message
+        [loadComponentMessages]="loadRequestDetail.loadComponentMessageList"></app-load-component-message>
 
     </fieldset>
   </ng-container>
