--- a/projects/ts-etl-ui/src/load-request-message/load-request-message.component.html
+++ b/projects/ts-etl-ui/src/load-request-message/load-request-message.component.html
@@ -1,47 +1,21 @@
-<fieldset>
-  <legend>Load Messages</legend>
-  <mat-form-field>
-    <mat-label>Filter Messages</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. INFO" #input>
-  </mat-form-field>
-  <table mat-table [dataSource]="dataSource()" matSort>
-    <ng-container matColumnDef="componentName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Component name</th>
-      <td mat-cell *matCellDef="let element"> {{element.componentName}} </td>
-    </ng-container>
+<table mat-table [dataSource]="dataSource()" matSort matSortActive="time" matSortDirection="asc">
+  <ng-container matColumnDef="type">
+    <th mat-header-cell *matHeaderCellDef> Type</th>
+    <td mat-cell *matCellDef="let row"> {{row.messageType}} </td>
+  </ng-container>
+  <ng-container matColumnDef="tag">
+    <th mat-header-cell *matHeaderCellDef> Tag</th>
+    <td mat-cell *matCellDef="let row"> {{row.tag}} </td>
+  </ng-container>
+  <ng-container matColumnDef="message">
+    <th mat-header-cell *matHeaderCellDef> Message</th>
+    <td mat-cell *matCellDef="let row"> {{row.message}} </td>
+  </ng-container>
+  <ng-container matColumnDef="time">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Time</th>
+    <td mat-cell *matCellDef="let row"> {{row.creationTime | easternTime }} </td>
+  </ng-container>
 
-    <ng-container matColumnDef="messageGroup">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Message Group</th>
-      <td mat-cell *matCellDef="let element"> {{element.messageGroup}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="messageType">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Message Type</th>
-      <td mat-cell *matCellDef="let element"> {{element.messageType}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="tag">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Tag</th>
-      <td mat-cell *matCellDef="let element"> {{element.tag}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="message">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Message</th>
-      <td mat-cell *matCellDef="let element"> {{element.message}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="creationTime">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Time</th>
-      <td mat-cell *matCellDef="let element"> {{element.creationTime | easternTime}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr>
-  </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of messages" [showFirstLastButtons]="true"></mat-paginator>
-</fieldset>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
