--- a/projects/ts-etl-ui/src/load-component/load-component.component.html
+++ b/projects/ts-etl-ui/src/load-component/load-component.component.html
@@ -1,35 +1,34 @@
 <fieldset>
-  <legend>Load Activities</legend>
-  <table mat-table [dataSource]="dataSource" matSort>
+  <legend>Load Components</legend>
+  <table mat-table [dataSource]="dataSource()" matSort matSortActive="startTime" matSortDirection="asc">
     <ng-container matColumnDef="componentName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Component name</th>
+      <th mat-header-cell *matHeaderCellDef> Component name</th>
       <td mat-cell *matCellDef="let element"> {{element.componentName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="startTime">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Start time</th>
-      <td mat-cell *matCellDef="let element"> {{element.startTime | easternTime}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.componentStartTime | easternTime}} </td>
     </ng-container>
 
     <ng-container matColumnDef="endTime">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> End Time</th>
-      <td mat-cell *matCellDef="let element"> {{element.endTime | easternTime}} </td>
+      <th mat-header-cell *matHeaderCellDef> End Time</th>
+      <td mat-cell *matCellDef="let element"> {{element.componentEndTime | easternTime}} </td>
     </ng-container>
 
     <ng-container matColumnDef="duration">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration</th>
-      <td mat-cell *matCellDef="let element"> {{duration(element) | easternTime: 'hh:mm:ss'}} </td>
+      <th mat-header-cell *matHeaderCellDef> Duration</th>
+      <td mat-cell *matCellDef="let element"> {{duration(element) | easternTime: 's'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
-      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+      <th mat-header-cell *matHeaderCellDef> Status</th>
+      <td mat-cell *matCellDef="let element"> {{element.componentStatus}} </td>
     </ng-container>
 
     <ng-container matColumnDef="nbOfMessages">
       <th mat-header-cell *matHeaderCellDef mat-sort-header># of Messages</th>
-      <td mat-cell
-          *matCellDef="let element"> {{element.infos.length + element.warnings.length + element.errors.length}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.messageCount}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
