--- a/projects/ts-etl-ui/src/material-theme.scss
+++ b/projects/ts-etl-ui/src/material-theme.scss
@@ -6,21 +6,21 @@ mat.$theme-ignore-duplication-warnings: true;
 @include mat.core();
 @include mat.strong-focus-indicators();
 
-$my-primary: mat.define-palette(mat.$indigo-palette, 500);
-$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$my-primary: mat.m2-define-palette(mat.$m2-indigo-palette, 500);
+$my-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
-$my-compact-typography-level: mat.define-typography-level(
+$my-compact-typography-level: mat.m2-define-typography-level(
         $font-size: 14px,
         $line-height: 16px,
         $font-weight: 300,
         $letter-spacing: -0.05em
 );
 
-$my-compact-typography: mat.define-typography-config(
+$my-compact-typography: mat.m2-define-typography-config(
         $body-2: $my-compact-typography-level,
 );
 
-$my-compact-theme: mat.define-light-theme((
+$my-compact-theme: mat.m2-define-light-theme((
         color: (
                 primary: $my-primary,
                 accent: $my-accent,
@@ -30,12 +30,12 @@ $my-compact-theme: mat.define-light-theme((
         density: -10,
 ));
 
-$my-theme: mat.define-light-theme((
+$my-theme: mat.m2-define-light-theme((
         color: (
                 primary: $my-primary,
                 accent: $my-accent,
         ),
-        typography: mat.define-typography-config(),
+        typography: mat.m2-define-typography-config(),
   // this value is set to -10 just to get the minimal value.
         density: -10,
 ));
