--- a/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
+++ b/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
@@ -3,7 +3,7 @@
     <fieldset>
       <legend>Load Request</legend>
       <ng-container
-        *ngIf="loadRequestSummary.requestStatus === 'Open' && user?.utsUser!.username === loadRequestSummary.requesterUsername">
+        *ngIf="loadRequestSummary.requestStatus === 'Open' && user!.username === loadRequestSummary.requesterUsername">
         <button mat-fab extended (click)="openEditDialog(loadRequestSummary)">
           Edit
         </button>
