--- a/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
+++ b/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
@@ -11,6 +11,7 @@
           Cancel
         </button>
       </ng-container>
+      <pre>{{loadRequestSummary | json}}</pre>
 
       <div class="mat-elevation-z8 my-3">
         <table mat-table [dataSource]="dataSource">
